# Nuvola-Java

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Nuvola/: CMakeLists.txt  Client.h  main.cpp
Nuvola/Hooks/: CMakeLists.txt  Hook.cpp  Hook.h  HookManager.cpp  HookManager.h
Nuvola/Hooks/OpenGL/: CMakeLists.txt  GLHook.cpp  GLHook.h
Nuvola/Hooks/Win32/: CMakeLists.txt  WndHook.cpp  WndHook.h
Nuvola/Modules/: Module.h
Tiny/: 1.8.9-named.tiny
